syntax = "proto3";
import "common/empty.proto";
import "users/user.proto";
import "users/message.proto";

package UsersMicroservice;

option csharp_namespace = "UsersMicroservice";

service Users {
  rpc Token (SignInRequest) returns (TokenReply);
  rpc Logout (LogoutRequest) returns (Empty);
  rpc BatchAddMessages (BatchAddMessagesRequest) returns (Empty);
  rpc Setup(SetupRequest) returns (Empty);
  rpc TearDown(Empty) returns (Empty);
}

message SignInRequest {
  string login = 1;
  string password = 2;
}

message TokenReply {
  string Token = 1;
}

message LogoutRequest {
  string Token = 1;
}

message BatchAddMessagesRequest {
  repeated Message messages = 1;
}

message SetupRequest {
  repeated User users = 1;
  repeated Message messages = 2;
}